# mini_Laser_Radar

./: README.md
LowerControl/esp32/ESP32S3_Radar/: .gitignore  CMakeLists.txt
LowerControl/esp32/ESP32S3_Radar/components/ATK_MS53L0M/: CMakeLists.txt  atk_ms530l0m.c
LowerControl/esp32/ESP32S3_Radar/components/ATK_MS53L0M/include/: atk_ms53l0m.h
LowerControl/esp32/ESP32S3_Radar/components/Steering/: CMakeLists.txt  Kconfig.projbuild  steering_control.c
LowerControl/esp32/ESP32S3_Radar/components/Steering/include/: steering_control.h
LowerControl/esp32/ESP32S3_Radar/components/WIFI/: CMakeLists.txt  Kconfig.projbuild  UDP_clinet.c  WIFI.c
LowerControl/esp32/ESP32S3_Radar/components/WIFI/include/: WIFI.h
LowerControl/esp32/ESP32S3_Radar/main/: CMakeLists.txt  Kconfig.projbuild  main.c  radar_UART_manager.c  radar_manager.c  steering_control.c
LowerControl/esp32/ESP32S3_Radar/main/communication_protocol/: mod_bus.c  mod_bus.h
LowerControl/esp32/ESP32S3_Radar/main/include/: radar_UART.h  radar_manager.h  steering_control.h
LowerControl/esp32/ESP32S3_Radar/main/input_task/: input_task.c  radar_manager.c  radar_manager.h
LowerControl/esp32/ESP32S3_Radar/main/steering_task/: steering_task.c  steering_task.h
LowerControl/esp32/ESP32S3_Radar/main/uart_task/: radar_uart.c  radar_uart.h  radar_uart_task.c  uart.c  uart.h  uart_task.c
LowerControl/esp32/ESP32S3_Radar/main/wifi_task/: UDP_clinet.c
